--- a/sample.html
+++ b/sample.html
@@ -143,3 +143,7 @@ permalink: /sample
   </ul>
 </section>
 </div>
+
+ <p><i class="fa fa-exclamation-triangle"></i> Severe</p>
+ <p><i class="fa fa-exclamation-circle"></i> Modest</p>
+ <p><i class="fa fa-exclamation-triangle"></i> Low</p>
