--- a/sample.html
+++ b/sample.html
@@ -144,6 +144,6 @@ permalink: /sample
 </section>
 </div>
 
- <p><i class="fa fa-exclamation-triangle"></i> Severe</p>
- <p><i class="fa fa-exclamation-circle"></i> Modest</p>
- <p><i class="fa fa-exclamation-triangle"></i> Low</p>
+ <p><i class="fa fa-exclamation-triangle" style="color:red"></i> Severe</p>
+ <p><i class="fa fa-exclamation-circle"  style="color:orange"></i> Modest</p>
+ <p><i class="fa fa-exclamation-triangle"  style="color:yellow" font-size=".8em"></i> Low</p>
