--- a/sample.html
+++ b/sample.html
@@ -146,4 +146,4 @@ permalink: /sample
 
  <p><i class="fa fa-exclamation-triangle" style="color:red"></i> Severe</p>
  <p><i class="fa fa-exclamation-circle"  style="color:orange"></i> Modest</p>
- <p><i class="fa fa-exclamation-triangle"  style="color:yellow" font-size=".8em"></i> Low</p>
+ <p><i class="fa fa-exclamation-triangle"  style="color:cyan" font-size="2em"></i> Low</p>
