--- a/sample.html
+++ b/sample.html
@@ -5,6 +5,11 @@ title: Content Tags & Components Sample
 permalink: /sample
 
 ---
+
+ <p><i class="fa fa-exclamation-triangle" style="color:red"></i> Severe</p>
+ <p><i class="fa fa-exclamation-circle"  style="color:orange"></i> Modest</p>
+ <p><i class="fa fa-comment-dots"  style="color:grey" ></i> Low</p>
+
 <div>
   <p style="font-size: 40px; background-color: whitesmoke;">Content tags</p>
   
@@ -144,6 +149,3 @@ permalink: /sample
 </section>
 </div>
 
- <p><i class="fa fa-exclamation-triangle" style="color:red"></i> Severe</p>
- <p><i class="fa fa-exclamation-circle"  style="color:orange"></i> Modest</p>
- <p><i class="fa fa-exclamation-triangle"  style="color:cyan" font-size="2em"></i> Low</p>
