--- a/sample.html
+++ b/sample.html
@@ -10,6 +10,11 @@ permalink: /sample
  <p><i class="fa fa-exclamation-circle"  style="color:orange"></i> Modest</p>
  <p><i class="fa fa-comment-dots"  style="color:grey" ></i> Low</p>
 
+
+Exploitability
+<p>Exploitablity <i class="fa fa-exclamation-circle"  style="color:orange"></i>, Prevalence <i class="fa fa-exclamation-circle"  style="color:orange"></i>, Detectability <i class="fa fa-exclamation-circle"  style="color:orange"></i>, Technnical</p>
+ <p><i class="fa fa-exclamation-triangle" style="color:red"></i>
+
 <div>
   <p style="font-size: 40px; background-color: whitesmoke;">Content tags</p>
   
