--- a/sample.html
+++ b/sample.html
@@ -11,9 +11,7 @@ permalink: /sample
  <p><i class="fa fa-comment-dots"  style="color:grey" ></i> Low</p>
 
 
-Exploitability
-<p>Exploitablity <i class="fa fa-exclamation-circle"  style="color:orange"></i>, Prevalence <i class="fa fa-exclamation-circle"  style="color:orange"></i>, Detectability <i class="fa fa-exclamation-circle"  style="color:orange"></i>, Technnical</p>
- <p><i class="fa fa-exclamation-triangle" style="color:red"></i>
+<p>Exploitablity <i class="fa fa-exclamation-circle"  style="color:orange; padding-right: 10px"></i>, Prevalence <i class="fa fa-exclamation-circle"  style="color:orange"></i>, Detectability <i class="fa fa-exclamation-circle"  style="color:orange"></i>, Technnical <i class="fa fa-exclamation-triangle" style="color:red"></i>
 
 <div>
   <p style="font-size: 40px; background-color: whitesmoke;">Content tags</p>
