--- a/sample.html
+++ b/sample.html
@@ -13,6 +13,14 @@ permalink: /sample
 
 <p>Exploitablity <i class="fa fa-exclamation-circle"  style="color:orange; padding-right: 10px"></i>, Prevalence <i class="fa fa-exclamation-circle"  style="color:orange"></i>, Detectability <i class="fa fa-exclamation-circle"  style="color:orange"></i>, Technnical <i class="fa fa-exclamation-triangle" style="color:red"></i>
 
+ <ul>
+  <li>Exploitablity <i class="fa fa-exclamation-circle"  style="color:orange"></i></li>
+  <li>Prevalence <i class="fa fa-exclamation-circle"  style="color:orange"></i></li>
+  <li>Detectability <i class="fa fa-exclamation-circle"  style="color:orange"></i></li>
+  <li>Technnical <i class="fa fa-exclamation-triangle" style="color:red"></i></li>
+ <ul>
+
+  
 <div>
   <p style="font-size: 40px; background-color: whitesmoke;">Content tags</p>
   
