--- a/sample.html
+++ b/sample.html
@@ -10,9 +10,25 @@ permalink: /sample
  <p><i class="fa fa-exclamation-circle"  style="color:orange"></i> Modest</p>
  <p><i class="fa fa-comment-dots"  style="color:grey" ></i> Low</p>
 
-
+#### V1
 <p>Exploitablity <i class="fa fa-exclamation-circle"  style="color:orange; padding-right: 10px"></i>, Prevalence <i class="fa fa-exclamation-circle"  style="color:orange"></i>, Detectability <i class="fa fa-exclamation-circle"  style="color:orange"></i>, Technnical <i class="fa fa-exclamation-triangle" style="color:red"></i>
 
+### v2
+<p>Exploitablity <i class="fa fa-exclamation-circle"  style="color:orange; padding-right: 20px"></i>
+ Prevalence <i class="fa fa-exclamation-circle"  style="color:orange; padding-right: 20px"></i>
+ Detectability <i class="fa fa-exclamation-circle"  style="color:orange; padding-right: 20px"></i>
+ Technnical <i class="fa fa-exclamation-triangle" style="color:red"></i>
+</p>
+
+### v3
+### v2
+<p> <i class="fa fa-exclamation-circle"  style="color:orange"></i>Exploitablity
+  <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px"></i>Prevalence
+  <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px"></i>Detectability
+  <i class="fa fa-exclamation-triangle" style="color:red ; padding-left: 20px"></i>Technnical
+</p>
+
+### v4
  <ul>
   <li>Exploitablity <i class="fa fa-exclamation-circle"  style="color:orange"></i></li>
   <li>Prevalence <i class="fa fa-exclamation-circle"  style="color:orange"></i></li>
