--- a/sample.html
+++ b/sample.html
@@ -28,6 +28,14 @@ permalink: /sample
   <i class="fa fa-exclamation-triangle" style="color:red ; padding-left: 20px"></i>Technnical
 </p>
 
+### A8 - Insecure Deserializatin
+<p> <i class="fa fa-command-dots"  style="color:grey"></i>Exploitablity
+  <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px"></i>Prevalence
+  <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px"></i>Detectability
+  <i class="fa fa-exclamation-triangle" style="color:red ; padding-left: 20px"></i>Technnical
+</p>
+
+
 ### v4
  <ul>
   <li>Exploitablity <i class="fa fa-exclamation-circle"  style="color:orange"></i></li>
