--- a/sample.html
+++ b/sample.html
@@ -20,19 +20,19 @@ permalink: /sample
  Technnical <i class="fa fa-exclamation-triangle" style="color:red"></i>
 </p>
 
+
 ### v3
-### v2
-<p> <i class="fa fa-exclamation-circle"  style="color:orange"></i>Exploitablity
-  <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px"></i>Prevalence
-  <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px"></i>Detectability
-  <i class="fa fa-exclamation-triangle" style="color:red ; padding-left: 20px"></i>Technnical
+<p> <i class="fa fa-exclamation-circle"  style="color:orange;padding-right: 5px"></i>Exploitablity
+  <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px; padding-right: 5px"></i>Prevalence
+  <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px ;padding-right: 5px"></i>Detectability
+  <i class="fa fa-exclamation-triangle" style="color:red ; padding-left: 20px; padding-right: 5px"></i>Technnical
 </p>
 
 ### A8 - Insecure Deserializatin
-<p> <i class="fa fa-command-dots"  style="color:grey"></i>Exploitablity
-  <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px"></i>Prevalence
-  <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px"></i>Detectability
-  <i class="fa fa-exclamation-triangle" style="color:red ; padding-left: 20px"></i>Technnical
+<p> <i class="fa fa-command-dots"  style="color:grey; padding-right: 5px"></i>Exploitablity
+  <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px; padding-right: 5px"></i>Prevalence
+  <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px; padding-right: 5px"></i>Detectability
+  <i class="fa fa-exclamation-triangle" style="color:red ; padding-left: 20px; padding-right: 5px"></i>Technnical
 </p>
 
 
