--- a/sample.html
+++ b/sample.html
@@ -6,9 +6,19 @@ permalink: /sample
 
 ---
 
+Icons/Colors
  <p><i class="fa fa-exclamation-triangle" style="color:red"></i> Severe</p>
  <p><i class="fa fa-exclamation-circle"  style="color:orange"></i> Modest</p>
  <p><i class="fa fa-comment-dots"  style="color:grey" ></i> Low</p>
+
+
+Example
+<h2> A8 - Insecure Deserializatin</h2>
+<p> <i class="fa fa-command-dots"  style="color:grey; padding-right: 5px"></i>Exploitablity
+  <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px; padding-right: 5px"></i>Prevalence
+  <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px; padding-right: 5px"></i>Detectability
+  <i class="fa fa-exclamation-triangle" style="color:red ; padding-left: 20px; padding-right: 5px"></i>Technnical
+</p>
 
 
 <h2> v3</h2>
@@ -18,12 +28,6 @@ permalink: /sample
   <i class="fa fa-exclamation-triangle" style="color:red ; padding-left: 20px; padding-right: 5px"></i>Technnical
 </p>
 
-<h2> A8 - Insecure Deserializatin</h2>
-<p> <i class="fa fa-command-dots"  style="color:grey; padding-right: 5px"></i>Exploitablity
-  <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px; padding-right: 5px"></i>Prevalence
-  <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px; padding-right: 5px"></i>Detectability
-  <i class="fa fa-exclamation-triangle" style="color:red ; padding-left: 20px; padding-right: 5px"></i>Technnical
-</p>
 
 
 ### v4
