--- a/sample.html
+++ b/sample.html
@@ -14,12 +14,13 @@ Icons/Colors
 
 Example
 <h2> A8 - Insecure Deserializatin</h2>
-<p> <i class="fa fa-command-dots"  style="color:grey; padding-right: 5px"></i>Exploitablity
+<p> <i class="fa fa-comment-dots"  style="color:grey; padding-right: 5px"></i>Exploitablity
   <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px; padding-right: 5px"></i>Prevalence
   <i class="fa fa-exclamation-circle"  style="color:orange; padding-left: 20px; padding-right: 5px"></i>Detectability
   <i class="fa fa-exclamation-triangle" style="color:red ; padding-left: 20px; padding-right: 5px"></i>Technnical
 </p>
 
+<hr>
 
 <h2> v3</h2>
 <p> <i class="fa fa-exclamation-circle"  style="color:orange;padding-right: 5px"></i>Exploitablity
