--- a/sample.html
+++ b/sample.html
@@ -11,7 +11,11 @@ Icons/Colors
  <p><i class="fa fa-exclamation-circle"  style="color:orange"></i> Modest</p>
  <p><i class="fa fa-comment-dots"  style="color:grey" ></i> Low</p>
 
-
+Icons/Colors v2
+ <p><i class="fa fa-skull-crossbones"  style="color:black" ></i> Critical</p>
+<p><i class="fa fa-exclamation-triangle" style="color:red"></i> Severe</p>
+ <p><i class="fa fa-exclamation-circle"  style="color:orange"></i> Modest</p>
+ 
 Example
 <h2> A8 - Insecure Deserializatin</h2>
 <p> <i class="fa fa-comment-dots"  style="color:grey; padding-right: 5px"></i>Exploitablity
@@ -28,7 +32,13 @@ Example
   <i class="fa fa-exclamation-triangle" style="color:red ; padding-left: 20px; padding-right: 5px"></i>Technnical
 </p>
 
-
+Example
+<h2> A8 - Insecure Deserializatin</h2>
+<p> <i class="fa fa-exclamation-circle"  style="color:orange; padding-right: 5px"></i>Exploitablity
+  <i class="fa fa-exclamation-triangle"  style="color:red; padding-left: 20px; padding-right: 5px"></i>Prevalence
+  <i class="fa fa-exclamation-triangle"  style="color:red; padding-left: 20px; padding-right: 5px"></i>Detectability
+  <i class="fa fa-skull-crossbones" style="color:black; padding-left: 20px; padding-right: 5px"></i>Technnical
+</p>
 
 <hr>
 
