--- a/sample.html
+++ b/sample.html
@@ -6,6 +6,9 @@ permalink: /sample
 
 ---
 
+{% include /www-policy/operation/code-of-conduct.md %}
+
+
 Icons/Colors
  <p><i class="fa fa-exclamation-triangle" style="color:red"></i> Severe</p>
  <p><i class="fa fa-exclamation-circle"  style="color:orange"></i> Modest</p>
