--- a/sample.html
+++ b/sample.html
@@ -9,16 +9,18 @@ permalink: /sample
 {% include /www-policy/operation/code-of-conduct.md %}
 
 
+Icons/Colors v2
+ <p><i class="fa fa-bolt"  style="color:red" ></i> Critical</p>
+<p><i class="fa fa-exclamation-triangle" style="color:orange"></i> Severe</p>
+ <p><i class="fa fa-exclamation-circle"  style="color:#3366ff"></i> Modest</p>
+ 
+
+
 Icons/Colors
  <p><i class="fa fa-exclamation-triangle" style="color:red"></i> Severe</p>
  <p><i class="fa fa-exclamation-circle"  style="color:orange"></i> Modest</p>
  <p><i class="fa fa-comment-dots"  style="color:grey" ></i> Low</p>
 
-Icons/Colors v2
- <p><i class="fa fa-skull-crossbones"  style="color:black" ></i> Critical</p>
-<p><i class="fa fa-exclamation-triangle" style="color:red"></i> Severe</p>
- <p><i class="fa fa-exclamation-circle"  style="color:orange"></i> Modest</p>
- 
 Example
 <h2> A8 - Insecure Deserializatin</h2>
 <p> <i class="fa fa-comment-dots"  style="color:grey; padding-right: 5px"></i>Exploitablity
