--- a/sample.html
+++ b/sample.html
@@ -6,8 +6,8 @@ permalink: /sample
 
 ---
 
-{% include /www-policy/operational/code-of-conduct.md %}
-
+<!-- {% include /www-policy/operational/code-of-conduct.md %}
+-->
 
 Icons/Colors v2
  <p><i class="fa fa-bolt"  style="color:red" ></i> Critical</p>
