--- a/sample.html
+++ b/sample.html
@@ -6,9 +6,7 @@ permalink: /sample
 
 ---
 
-{% comment %} <!-- You cannot comment out liquid with http comments --> 
-{% include /www-policy/operational/code-of-conduct.md %} 
-{% endcomment %}
+{% comment %}{% include /www-policy/operational/code-of-conduct.md %}{% endcomment %}
 
 Icons/Colors v2
  <p><i class="fa fa-bolt"  style="color:red" ></i> Critical</p>
